src/FinancialForce ClickLink/objects/IntegrationRuleSourceLineItemTest__c.object
<CustomObject>
    <fields>
        <fullName>ABooleanField__c</fullName>
        <defaultValue>false</defaultValue>
        <label>A Boolean Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ANumberField__c</fullName>
        <label>A Number Field</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ATextField__c</fullName>
        <label>A Text Field</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AnotherTextField__c</fullName>
        <label>Another Text Field</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClickLinkAnotherSourceLineItemCount__c</fullName>
        <label>ClickLink Another Source Line Item Count</label>
        <summaryForeignKey>ClickLinkAnotherSourceTest__c.ClickLinkSourceLineItemTest__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>IntegrationRuleSourceTest__c</fullName>
        <label>ClickLink Source Test</label>
        <referenceTo>IntegrationRuleSourceTest__c</referenceTo>
        <relationshipLabel>ClickLink Source Line Item Tests</relationshipLabel>
        <relationshipName>IntegrationRuleSourceLineItemTests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ProcessFormula__c</fullName>
        <formula>IF(CONTAINS(ATextField__c, &apos;Skip&apos;), 0, 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Process Formula</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Process</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Processed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Processed</label>
        <type>Checkbox</type>
    </fields>
    <label>ClickLink Source Line Item Test</label>
    <nameField>
        <displayFormat>IRTSTSL-{00000000}</displayFormat>
        <label>ClickLink Source Line Item Test</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ClickLink Source Line Item Tests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>